# ferry

./: .gitignore  README.md  pyproject.toml
src/ferry/: __main__.py
src/ferry/adapters/: detect.py  dolphin_config.py  dolphin_paths.py  dolphin_saves.py  dolphin_tool.py  esde_paths.py  orphan_hash.py  retroarch_config.py  retroarch_core_info.py  retroarch_paths.py  retroarch_saves.py  sidecar.py  state_store.py
src/ferry/cli/: __init__.py  _utils.py  config_cmd.py  detect.py  launch_hooks.py  ping.py  reconcile.py  status.py  sync.py  units.py
src/ferry/config/: __init__.py  loader.py  schema.py
src/ferry/data/: platform_map.json
src/ferry/domain/: bios_placement.py  (+14 more)
tests/: conftest.py  test_bios_executor.py  test_bios_plan.py  test_cemu_paths.py  test_cemu_save_backend.py  test_cemu_tool.py  test_cli.py  test_cli_config_edit.py  test_cli_install_units.py  test_cli_launch_hooks.py  test_cli_reconcile.py  test_cli_status.py  test_cli_sync.py  test_config.py  test_destination.py  test_detect.py  test_dolphin_archive.py  test_dolphin_config.py  test_dolphin_paths.py  test_dolphin_save_backend.py  test_dolphin_saves.py  test_dolphin_tool.py  test_esde_paths.py  test_gamecube_config.py  test_gamecube_save_backend.py  test_gamecube_saves.py  test_iso_time.py  test_launch_hooks_drift.py  test_orphan_hash.py  test_pipeline.py  test_platforms.py  test_reconcile_service.py  test_retroarch_config.py  test_retroarch_core_info.py  test_retroarch_paths.py  test_retroarch_saves.py  test_rom_files.py  test_romm_adapter.py  test_save_backend.py  test_save_conflicts.py  (+14 more)
(+41 files in other folders)
